# trakbridge-plugin-adsb

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  update_version.py
docs/: concept.md
plugin/: adsb.py  functions.py
