[project]
name = "trakbridge-plugin-adsb"
version = "0.2.0"
description = "ADSB Plugin for TrakBridge"
authors = [
    { name = "Stefan Gofferje", email = "stefan@gofferje.net" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0"
]

[tool.poetry]
packages = [{include = "plugin"}]

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
mypy = "^1.8.0"
pylint = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "invalid-name",
    "import-error",
    "line-too-long"
]

[tool.pylint.format]
max-line-length = 88
